--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@gluestack-ui/overlay": "^0.1.20",
     "@gluestack-ui/select": "^0.1.31",
     "@gluestack-ui/toast": "^1.0.9",
+    "@gorhom/bottom-sheet": "^5.1.1",
     "@legendapp/motion": "^2.4.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
@@ -53,9 +54,9 @@
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^5.2.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.2.0",
+    "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "^0.10.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
